# rvi2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  RVI2.Core.sln  RVI2.sln  build.bat  build.sh  s_build.bat  s_build_debug.bat  s_build_debug.sh  s_build_release.bat  s_build_release.sh  s_clean_workdir.sh  s_gen_docs.sh
CMake_Modules/: rvi.cmake
Core/: CMakeLists.txt
Core/include/: base64.hpp  color_rgba.hpp  definition.hpp  frame.hpp  instruction_generator.hpp  line.hpp  rvi_base.hpp  rvi_math.hpp  vector2.hpp
Core/src/: client_context.cpp  definition.cpp  frame.cpp  rvi_math.cpp  transform2.cpp  vector2.cpp
RVI2.Core/: RVI2.Core.vcxproj  RVI2.Core.vcxproj.filters
RVI2.Core/src/: base64.cpp  clientContext.h  client_context.cpp  client_context.h  color.cpp  color.h  colorRgba.cpp  colorRgba.h  color_rgba.cpp  color_rgba.h  command_base.cpp  command_base.h  frame.cpp  (+31 more)
RVI2.Runtime/: RVI2.Runtime.vcxproj  RVI2.Runtime.vcxproj.filters
RVI2.Server/: RVI2.Server.vcxproj  RVI2.Server.vcxproj.filters
RVI2.UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters
UnitTests/: UnitTests.vcxproj
cmake_modules/: rvi.cmake
data/: main.lua  main.rpf
lib/: CMakeLists.txt
lib/client/: CMakeLists.txt
lib/client/include/: client_cmd_type.hpp
lib/core/: CMakeLists.txt  RVI2.Core_CXX_cotire.cmake  rvi.core_CXX_cotire.cmake
lib/core/include/: base64.hpp  client_context.hpp  color_rgba.hpp  constrained_buffer.hpp  definition.hpp  frame.hpp  instruction_generator.hpp  line.hpp  rectangle.hpp  relative_snapshot.hpp  rvi_assert.hpp  rvi_base.hpp  rvi_math.hpp  std_fs.hpp  str_utils.hpp  transform2.hpp  vector2.hpp  vertex.hpp
lib/core/include/rvi/: assert.hpp  base.hpp  base64.hpp  client_context.hpp  color_rgba.hpp  constrained_buffer.hpp  cpu_support.hpp  frame.hpp  line.hpp  line_container.hpp  math.hpp  rectangle.hpp  relative_snapshot.hpp  str_utils.hpp  transform2.hpp  vector2.hpp  vertex.hpp  vtable.hpp
lib/core/src/: assert.cpp  base64.cpp  client_context.cpp  color_rgba.cpp  cpu_support.cpp  definition.cpp  frame.cpp  instruction_generator.cpp  line.cpp  line_container.cpp  math.cpp  rectangle.cpp  rvi_assert.cpp  rvi_base.cpp  rvi_math.cpp  str_utils.cpp  transform2.cpp  vector2.cpp  vertex.cpp
lib/cozy/: CMakeLists.txt
lib/cozy/include/: opengl_ctx.hpp  opengl_debug.hpp  window.hpp
lib/cozy/include/rvi/: opengl_ctx.hpp  opengl_debug.hpp  shader_utils.hpp  vframe.hpp  vframe_container.hpp  window.hpp
lib/cozy/shaders/: pxshader.glsl  vxshader.glsl
lib/cozy/src/: glad.cpp  opengl_ctx.cpp  shader_utils.cpp  vframe.cpp  vframe_container.cpp  window.cpp
lib/host/: CMakeLists.txt
lib/host/include/: call_map.hpp  clickable_frame_data.hpp  client_instance.hpp  client_instance_data.hpp  cmd_def_map.hpp  cmd_map.hpp  cmd_type.hpp  constrained_buffer.hpp  context_action_map.hpp  data_reader.hpp  definition.hpp  host_types.hpp  interpreter.hpp  parsed_stmt.hpp  reader.cpp  reader.hpp  runtime.hpp  runtime_call.hpp  runtime_cmd.hpp  std_bindings.hpp  str_utils.hpp
lib/host/include/rvi/: clickable_frame_data.hpp  client_instance.hpp  client_instance_data.hpp  cmd_def_map.hpp  cmd_map.hpp  cmd_type.hpp  command_definitions.hpp  command_type.hpp  command_type_map.hpp  lua_context.hpp  parsed_stmt.hpp  reader.hpp  runtime.hpp  standard_library.hpp  std_bindings.hpp
lib/host/src/: call_map.cpp  clickable_frame_data.cpp  client_instance.cpp  cmd_def_map.cpp  cmd_map.cpp  command_definitions.cpp  command_type_map.cpp  context_action_map.cpp  data_reader.cpp  interpreter.cpp  lua_context.cpp  reader.cpp  runtime.cpp  standard_library.cpp  std_bindings.cpp  str_utils.cpp
lib/net/: CMakeLists.txt
lib/net/include/: tcp_client.hpp  tcp_client_posix.hpp  tcp_client_win32.hpp  tcp_connection.hpp  tcp_listener.hpp  tcp_listener_posix.hpp  tcp_listener_win32.hpp  tcp_socket.hpp
lib/net/include/posix/: tcp_client_posix.hpp  tcp_common_posix.hpp  tcp_socket_posix.hpp
lib/net/include/rvi/: tcp_common.hpp  tcp_connection.hpp  tcp_listener.hpp
lib/net/include/win32/: tcp_client_win32.hpp  tcp_common_win32.hpp  tcp_connection_win32.hpp  tcp_listener_win32.hpp  tcp_socket_win32.hpp
lib/net/src/: tcp_client_win32.cpp  tcp_common_win32.cpp  tcp_connection_win32.cpp  tcp_listener_win32.cpp
lib/net/src/win32/: tcp_client_win32.cpp  tcp_common_win32.cpp  tcp_connection_win32.cpp  tcp_listener_win32.cpp  tcp_socket_win32.cpp
lib/remote/: CMakeLists.txt
lib/remote/client/: CMakeLists.txt
lib/remote/common/: CMakeLists.txt
lib/remote/common/include/: message_header.hpp  messages.hpp  msg_builder.hpp  msg_header.hpp
lib/remote/common/src/: messages.cpp  msg_builder.cpp
lib/remote/server/: CMakeLists.txt
lib/remote/server/include/: server.hpp
lib/remote/server/src/: server.cpp
lib/remote/tcp_client/: CMakeLists.txt
lib/remote/tcp_client/include/: rvi_tcp_client.hpp
lib/remote/tcp_client/src/: rvi_tcp_client.cpp
lib/remote/tcp_server/: CMakeLists.txt
lib/remote/tcp_server/include/: rvi_tcp_server.hpp  tcp_server.hpp
lib/remote/tcp_server/src/: rvi_tcp_server.cpp  tcp_server.cpp
lib/serialization/: CMakeLists.txt  rvi2.serialization_CXX_cotire.cmake
lib/serialization/include/: base.hpp  cmd_header.hpp  contract.hpp  contract_elem_desc.hpp  contract_elem_desc.inl  contract_elem_desc.inl.hpp  contract_elem_type.hpp  deserializer.hpp  serialization.hpp  serialization_base.hpp  serializer.cpp  serializer.hpp  serializer.ipp  template_helpers.hpp  test.hpp  utils.hpp
lib/serialization/include/rvi/: serialization.hpp
lib/serialization/src/: contract.cpp  contract_elem_desc.cpp  deserializer.cpp  serialization.cpp  serialization_base.cpp  serializer.cpp  test.cpp
samples/: CMakeLists.txt
samples/cozy_sample/: CMakeLists.txt
samples/cozy_sample/src/: main.cpp
samples/simd_bench/: CMakeLists.txt
samples/simd_bench/src/: main.cpp
test/: CMakeLists.txt
test/host/: CMakeLists.txt
test/host/src/: test_reader.cpp
test/serialization/: CMakeLists.txt
test/serialization/src/: serialization_base_roundtrips.cpp
(+55 files in other folders)
